[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-comply"
version = "1.0.0"
description = "Compliance and audit trail for AI agent workflows — tamper-proof logging, decision reconstruction, regulatory reporting"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "mattyopon" }]
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.9",
    "httpx>=0.25",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
agent-comply = "agent_comply.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_comply"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
